# clice

./: .coderabbit.yaml  .gitignore  404.html  CMakeLists.txt  README.md  hashmap.json  index.html  pixi.toml
.claude/: CLAUDE.md
.claude/commands/: release.md  test.md  upgrade-llvm.md
.github/actions/setup-pixi/: action.yml
.github/workflows/: benchmark.yml  build-llvm.yml  build.yml  check-format.yml  cross-pair.yml  cross-test.yml  deploy-docs.yml  editor-test.yml  main.yml  native-test.yml  nightly.yml  publish-clice.yml  publish-vscode.yml  release-check.yml  release-llvm.yml  test.yml  upload-llvm.yml
assets/: app.DQoL_1fX.js  design_architecture.md.B-ctAdqa.js  design_architecture.md.B-ctAdqa.lean.js  design_compilation.md.CgLBgVWN.js  design_compilation.md.CgLBgVWN.lean.js  design_header-context.md.CLeWGHwo.js  design_header-context.md.CLeWGHwo.lean.js  design_index.md.Buyl5Jmv.js  design_template-resolver.md.BNn_jKB5.js  design_template-resolver.md.BNn_jKB5.lean.js  dev_build.md.BMRSQYou.js  dev_build.md.BMRSQYou.lean.js  dev_contribution.md.DhEkIBdN.js  dev_contribution.md.DhEkIBdN.lean.js  dev_extension.md.XVgKd8kt.js  dev_extension.md.XVgKd8kt.lean.js  dev_test-and-debug.md.Cd8ZNQsd.js  dev_test-and-debug.md.Cd8ZNQsd.lean.js  guide_configuration.md.D4nmP_A7.js  guide_configuration.md.D4nmP_A7.lean.js  guide_quick-start.md.CTAi4GI0.js  guide_quick-start.md.CTAi4GI0.lean.js  guide_what-is-clice.md.D2ebPDnR.js  guide_what-is-clice.md.D2ebPDnR.lean.js  index.md.BIyS1X5z.js  style.C0Yaiv_5.css  zh_design_architecture.md.Dtjvys6J.js  zh_design_architecture.md.Dtjvys6J.lean.js  zh_design_compilation.md.spz_aNkl.js  zh_design_compilation.md.spz_aNkl.lean.js  zh_design_header-context.md.ySoc9rIE.js  zh_design_header-context.md.ySoc9rIE.lean.js  zh_design_index.md.C7K-QRDi.js  zh_design_template-resolver.md.DDSv4CNK.js  zh_design_template-resolver.md.DDSv4CNK.lean.js  zh_dev_build.md.25ZHlRiJ.js  zh_dev_build.md.25ZHlRiJ.lean.js  zh_dev_contribution.md.DxaaX3ax.js  zh_dev_contribution.md.DxaaX3ax.lean.js  zh_dev_extension.md.CNVomHxL.js  (+10 more)
assets/chunks/: framework.l7bN90nj.js  theme.CLpq7zWO.js
benchmarks/: scan_benchmark.cpp
cmake/: archive.cmake  generate_version.cmake  llvm.cmake  package.cmake  release.cmake  version.h.in
design/: architecture.html  compilation.html  header-context.html  index.html  template-resolver.html
dev/: build.html  contribution.html  extension.html  test-and-debug.html
docs/: clice.toml
docs/en/: architecture.md  index.md  sidebar.yaml
docs/en/changelog/: feature-changelog.md  llvm-changelog.md
docs/en/design/: architecture.md  command-resolve.md  command.md  compilation-context.md  compilation.md  dependency-scanning.md  header-context.md  incremental-parse.md  incremental.md  index-design.md  index.md  module-graph.md  module.md  multi-process.md  overview.md  symbol-index.md  template-resolver.md
docs/en/dev/: build.md  contribution.md  extension.md  test-and-debug.md
docs/en/features/: code-action.md  completion.md  diagnostics.md  document-links.md  document-symbols.md  folding-ranges.md  formatting.md  hover.md  inlay-hints.md  lint.md  navigation.md  overview.md  semantic-tokens.md  signature-help.md
docs/en/guide/: configuration.md  editors.md  quick-start.md
docs/zh/: index.md  sidebar.yaml
docs/zh/changelog/: feature-changelog.md
docs/zh/design/: architecture.md  command-resolve.md  command.md  compilation-context.md  compilation.md  dependency-scanning.md  header-context.md  incremental-parse.md  incremental.md  index-design.md  index.md  module-graph.md  module.md  multi-process.md  overview.md  symbol-index.md  template-resolver.md
docs/zh/dev/: build.md  contribution.md  extension.md  test-and-debug.md
docs/zh/features/: code-action.md  completion.md  diagnostics.md  document-links.md  document-symbols.md  folding-ranges.md  formatting.md  hover.md  inlay-hints.md  (+5 more)
editors/vscode/: .gitignore  .vscode-test.mjs  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
editors/zed/: LICENSE
guide/: configuration.html  quick-start.html  what-is-clice.html
scripts/: activate_asan_macos.sh  build-llvm.py  release-llvm.py  symbolize.py
src/: clice.cc
src/command/: argument_parser.cpp  argument_parser.h  command.cpp  command.h  search_config.cpp  toolchain.cpp  toolchain.h
src/compile/: compilation.cpp  compilation.h  compilation_unit.cpp  compilation_unit.h  dep_file.h  diagnostic.cpp  diagnostic.h  directive.cpp  directive.h  implement.h
src/driver/: doc.cc  driver.h  format.cc  index.cc  lint.cc  query.cc  serve.cc  worker.cc
src/feature/: code_completion.cpp  diagnostics.cpp  document_link.h  document_links.cpp  document_symbols.cpp  feature.h  folding_ranges.cpp  formatting.cpp  hover.cpp  inactive_regions.cpp  inactive_regions.h  inlay_hints.cpp  semantic_tokens.cpp
src/index/: include_graph.cpp  include_graph.h  merged_index.cpp  merged_index.h  path_pool.h  preamble_state.cpp  preamble_state.h  project_index.cpp  project_index.h  schema.fbs  serialization.h  tu_index.cpp  tu_index.h
src/semantic/: ast_utility.cpp  ast_utility.h  filtered_ast_visitor.h  find_target.cpp  find_target.h
src/support/: anomaly.cpp  anomaly.h  cache_store.cpp  cache_store.h  filesystem.h  logging.cpp  logging.h  markup.cpp  markup.h  path_pool.h  signal.h  stderr_sink.cpp  stderr_sink.h  timer.h
src/syntax/: completion.cpp  dependency_graph.cpp  dependency_graph.h  lexer.cpp  preamble_synthesis.cpp  preamble_synthesis.h  scan.cpp  scan.h
tests/: cdb.py  conftest.py  prepare.py  pytest.ini  replay.py  stress.py
tests/smoke/: session_lsp318.jsonl
tests/tools/: checks.py  client.py  compile_commands.py  feature_docs.py  injection.py  lifecycle.py  prepare.py  replay.py  stress.py  workspace.py
tests/unit/: unit_tests.cc
zh/: index.html
zh/design/: architecture.html  compilation.html  header-context.html  index.html  template-resolver.html
zh/dev/: build.html  contribution.html  extension.html  test-and-debug.html
zh/guide/: configuration.html  quick-start.html  what-is-clice.html
(+329 files in other folders)
